--- a/180326/chungnam/css/icon.css
+++ b/180326/chungnam/css/icon.css
@@ -13,6 +13,16 @@
 .icon{
     font-family: 'Material Icons';
     font-size: 24px;
+    color: inherit;
+    font-weight: normal;
+    font-style: normal;
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
 }
 .icon.menu::before{
     content: 'menu';
