--- a/180326/chungnam/css/style.css
+++ b/180326/chungnam/css/style.css
@@ -69,7 +69,7 @@ button {
 .wrap.home{
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: black !important;
     position: relative;
 }
 .wrap.home::before{
@@ -89,7 +89,7 @@ button {
 
     background-position: 50% 50%;
     background-size: cover;
-    opacity: 0.4;
+    opacity: 0.3;
     position: absolute;
     top: 0;
     left: 0;
@@ -100,28 +100,53 @@ button {
     position: relative;
     z-index: 3;
 }
-
 .header{
     height: 50px;
     background-color: #ffd800;
     position: relative;
 }
+.header h1{
+    margin: 0;
+    font-size: 1.3em;
+    line-height: 45px;
+    width: 230px;
+    margin: 0 auto;
+    text-align: center;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+/*
+    <-- 포지션이  absolute일때 가운데로 보내기 --> 
+    position: absolute;
+    margin-left: -115px;
+    left: 50%; */
+/* 
+white-space:nowrap; br태그 쓰기 전까지 한줄로만 출력
+text_overflow:eclipsis; 박스 밖으로 나간 글씨들 
+*/
 .home .header{
     background: none; 
 }
-.header .menu {
+.header .back,
+.header .menu{
     width: 45px;
     line-height: 45px;
     text-align: center;
     position: absolute;
-    right: 5px;
-    top: 2px;
+    top: 0px;
     color: white;
+    border: 1px red solid;
+}
+.header .menu {
+    right: 0px;
+}
+.header .back{
+    left: 0px;
 }
 .ui.sidebar .top{
     background: #202020;
     text-align: center;
-    padding: 0;
+    padding: 10px 0;
     position: relative;
     margin: 0;
 }
@@ -150,14 +175,17 @@ button {
     position: relative;
 }
 .ui.sidebar .close{
+    top: 0;
+    right: 0;
     position: absolute;
     padding: 10px;
     color: white;
-    border: 1px red solid;
 }
 /* home contents */
+.home .contents{
+    position: relative;
+}
 .home .contents .title{ 
-    border: 1px solid red;
     color: white;
     text-align: center;
 }
@@ -167,7 +195,6 @@ button {
 }
 
 .home .contents .cont{
-    border: 1px solid red;
     width: 80%;
     margin: 0 auto;
     height: 250px;
@@ -175,11 +202,35 @@ button {
     color: white;
     overflow: auto;
     text-align: justify;
+    position: relative;
+    opacity: 0;
+    animation-name: aniCont;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-out;
+    animation-delay: 0s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: aniCont;
+    -webkit-animation-duration: 1.5s;
+    -webkit-animation-timing-function: ease-out;
+    -webkit-animation-delay: 0s;
+    -webkit-animation-fill-mode: forwards;
 }
 .home .contents .links{
     width: 80%;
     margin: 20px auto;
     color: white;
+    opacity: 0;
+    animation-name: aniLinks;
+    position: relative;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-out;
+    animation-delay: 1s;
+    animation-fill-mode: forwards;
+    -webkit-animation-name: aniLinks;
+    -webkit-animation-duration: 1.5s;
+    -webkit-animation-timing-function: ease-out;
+    -webkit-animation-delay: 1s;
+    -webkit-animation-fill-mode: forwards;
 }
 .home .contents .links .btn{
     background: rgba(0, 0, 0, 0.7);
@@ -191,6 +242,46 @@ button {
 .home .contents .links .btn:nth-child(4){
     width: 48%;
     float: right;
+}
+@keyframes aniCont{
+    from{
+        top: 30px;
+        opacity: 0;
+    }
+    to{
+        top:0;
+        opacity: 1;
+    }
+}
+@keyframes aniLinks{
+    from{
+        top: 30px;
+        opacity: 0;
+    }
+    to{
+        top:0;
+        opacity: 1;
+    }
+}
+@-webkit-keyframes aniCont{
+    from{
+        top: 30px;
+        opacity: 0;
+    }
+    to{
+        top:0;
+        opacity: 1;
+    }
+}
+@-webkit-keyframes aniLinks{
+    from{
+        top: 30px;
+        opacity: 0;
+    }
+    to{
+        top:0;
+        opacity: 1;
+    }
 }
 
 /* 사이드바 */
