청남대 page1 틀 작업 / 청남대 page2 틀 작업

--- a/180326/chungnam/css/icon.css
+++ b/180326/chungnam/css/icon.css
@@ -24,6 +24,9 @@
     white-space: nowrap;
     direction: ltr;
 }
+.icon.back::before{
+    content: 'keyboard_arrow_left';
+}
 .icon.menu::before{
     content: 'menu';
 }
