--- a/180326/chungnam/css/style.css
+++ b/180326/chungnam/css/style.css
@@ -38,32 +38,6 @@ button {
     padding: 0;
 }
 
-.btn{
-    border: #ffd800 1px solid;
-    padding: 0.5em 0;
-    text-align: center;
-    display: block;
-    width: 100%;
-    margin: 0 0 5px 0;
-    line-height: 1em;
-}
-.icon{
-    font-family: 'Material Icons';
-    font-size: 24px;
-}
-.icon.menu::before{
-    content: 'menu';
-}
-.icon.back::before{
-    content: 'keyboard_arrow_left';
-}
-.icon span{
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    opacity: 0;
-    overflow: hidden;
-}
 /* The element to apply the animation to */
 
 .wrap.home{
@@ -288,9 +262,6 @@ text_overflow:eclipsis; 박스 밖으로 나간 글씨들
 #body .ui.sidebar{
     background: white;
 }
-body.pushable>.pusher {
-    background: black;
-}
 .pushable>.pusher:after{
     background: rgba(0, 0, 0, 0.6);
 }
@@ -300,4 +271,92 @@ body.pushable>.pusher {
 }
 ::-webkit-scrollbar{
     width: 0px;
+}
+
+/* 공통 탭메뉴 */
+.tabMenu {
+    background-color: #2f2d2d;
+    color: white;
+}
+.tabMenu .swiper-slide {
+    display: inline-block;
+    width: auto;
+    padding: 10px 0;
+}
+.page1 .tabMenu .swiper-slide-active,
+.page2 .tabMenu .active {
+    color: #ffd800;
+}
+
+/* page1 */
+.page1 .tabMenu .swiper-slide-active {
+    color: #ffd800;
+}
+.page1 .tabContents>.swiper-wrapper>.swiper-slide{
+    overflow-y: auto;
+    height: 90vh;
+    border: 1px solid #f00;
+}
+.page1 .swiper-images {
+    width:100%;
+    height: 200px;
+}
+.page1 .swiper-images img {
+    width: 100%;
+}
+.page1 .container .contents .tabContents{
+    padding: 0 10px;
+}
+.page1 .tabContents .title{
+    text-align: center;
+}
+.page1 .tabContents .comment{
+    margin: 20px 0;
+    font-size: 0.9em;
+}
+
+
+/* page2 css */
+.linkDetail .close.icon{
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    border: 1px solid red;
+}
+.linkDetail{
+    position: fixed;
+    bottom: -120px;
+    left: 0;
+    width: 100%;
+    height: 120px;
+    background: white;
+    border-top: 1px #ccc solid;   
+    transition: all 0.5s ease-in-out 0.1s 
+}
+.linkDetail .img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    overflow: hidden;
+     position: absolute;
+     left: 20px;
+     top: 10px;
+}
+.linkDetail .img img{
+    height: 100%;
+}
+.linkDetail .tit{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    padding: 10px 0;
+    width: 50%;
+    text-align: center;
+    font-weight: bold;
+}
+.linkDetail .btn{
+    position: absolute;
+    bottom: 25px;
+    width: 50%;
+    right: 10px;
 }
