--- a/180326/chungnam/css/icon.css
+++ b/180326/chungnam/css/icon.css
@@ -27,6 +27,9 @@
 .icon.back::before{
     content: 'keyboard_arrow_left';
 }
+.icon.schedule::before{
+    content:'perm_contact_calendar';
+}
 .icon.menu::before{
     content: 'menu';
 }
