--- a/portfolio01/css/style.css
+++ b/portfolio01/css/style.css
@@ -52,6 +52,18 @@ button {
 .logo img{
     width: 100%;
 }
+.header .headerBox .navi2{
+    width: 100%;
+    display: none;
+    background-color: black;
+    position: absolute;
+    z-index: 10;
+}
+.header .navi:hover+.navi2,
+.header .navi2:hover
+{
+    display: block;
+}
 .header .headerBox ul{
     color: white;
     width: 950px;
@@ -154,6 +166,30 @@ nav .navigation .naviBox{
     width: 100%;
 }
 /* ---------------------------------------------------------------------------------- */
+.menuSection>div>div>div{
+    height: 80%;
+    border-bottom: 1px #ccc solid;
+}
+.coffee>div{
+    width: 90%;
+}
+.cake>div{
+    width: 75%;
+    padding-left: 50px;
+    margin-top: 5px;
+    float: right;
+}
+.tabMenu {
+    color: white;
+    height: 100%;
+}
+.tabMenu .swiper-slide {
+    display: inline-block;
+    width: auto;
+    padding: 10px 0;
+    border: 1px solid green;
+}
+/* -------------------------------------------------------------------------------- */
 .menuSection{
     padding: 150px 0;
 }
@@ -174,16 +210,15 @@ nav .navigation .naviBox{
 }
 
 .menuSection .cake{
-    width: 100%;
+    width: 65%;
     height: 330px;
     overflow: hidden;
     position: absolute;
     right: 0;
     top: 10px;
+    background: red;
 }
-.menuSection .cake img{
-    width: 100%;
-}
+
 /* ---------------------------------------------------------------------------------- */
 .newProduct .backImg{
     border: 1px black solid;
@@ -201,13 +236,13 @@ nav .navigation .naviBox{
     font-weight: 300;
 }
 .newProduct .circleBox{
-    width: 980px;
+    width: 930px;
     margin: 0 auto;
     position: relative;
 }
 .newProduct .circle{
-    height: 350px;
-    width: 350px;
+    height: 330px;
+    width: 330px;
     background: white;
     border: 1px solid black;
     border-radius: 50%;
@@ -216,14 +251,90 @@ nav .navigation .naviBox{
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 1;
+    background-image: url(../img/new01.png);
+    background-position: 50%;
+    background-size: 270px;
+    background-repeat: no-repeat;
 }
 .newProduct .circleBox .circle:nth-child(2){
     position: absolute;
     top: 0;
-    left: 32%;
+    left: 32.5%;
+    z-index: 2;
+    background-image: url(../img/new02.png);
+    background-position: 50%;
+    background-size: 270px;
+    background-repeat: no-repeat;
 }
 .newProduct .circleBox .circle:nth-child(3){
     position: absolute;
     top: 0;
     right: 0;
+    z-index: 3;
+    background-image: url(../img/Untitled-1.png);
+    background-position: 50%;
+    background-size: 270px;
+    background-repeat: no-repeat;
+}
+.newProduct .circleBox .circle:hover {
+    height: 370px;
+    width: 370px;
+    border-radius: 50%;
+    z-index: 5;
+    background-size: 300px;
+}
+
+
+/* -------------------------------------------------------------------------------- */
+.sns h2{
+    margin: 100px auto;
+    width: 300px;
+    text-align: center;
+}
+.sns .snsImg{
+    width: 930px;
+    margin: 0 auto 150px;
+}
+.sns .snsImg>div{
+    width:300px;
+    float: left;
+    background-color: white;
+    box-shadow: 0 0  5px 2px #555555;
+    margin: 0 5px;
+    padding: 5px 5px 30px;
+}
+.sns .snsImg>div>div{
+    height: 270px;
+    overflow: hidden;
+}
+.sns .snsImg div img {
+    width: 100%;
+    border: 1px #ccc solid;
+}
+.sns .snsImg span{
+    float: right;
+    margin: 70px 0 0;
+    font-weight: 800;
+    color: steelblue;
+}
+/* ----------------------------------------------------------------------------- */
+.map .backgroundImg{
+    width: 100%;
+    height: 450px;
+    background-image: url(../img/map01.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.map .backgroundImg .mapLeft,
+.map .backgroundImg .mapRight{
+    width: 50%;
+    height: 100%;
+    float: left;
+}
+.map .backgroundImg .mapLeft{
+    background-color: rgba(255, 0, 0, 0.8);
+}
+.map .backgroundImg .mapRight{
+    background-color: rgba(0, 0, 0, 0.8);
 }
